eventstore_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventstore-service
spec:
  selector:
    app: eventstore
  ports:
    - protocol: TCP
      port: 2113
      targetPort: 2113
  type: LoadBalancer
