mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: LoadBalancer
#status:
#  loadBalancer:
 #   ingress:
  #  - ip: 192.0.2.127
