postgre_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
spec:
  selector:
    app: postgre
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
